# app/Http/Controllers/Api/PortfolioController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
 use App\Http\Resources\PortfolioResource;
+use App\Http\Resources\PortfolioSingleResource;
 use App\Models\Portfolio;
 
 
@@ -27,14 +28,14 @@ class PortfolioController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/portofolio/{id}",
+     *     path="/portofolio/{slug}",
      *     tags={"Portfolio"},
-     *     summary="Get portfolio by ID",
+     *     summary="Get portfolio by slug",
      *     @OA\Parameter(
-     *         name="id",
+     *         name="slug",
      *         in="path",
      *         required=true,
-     *         @OA\Schema(type="integer")
+     *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -42,8 +43,9 @@ class PortfolioController extends Controller
      *     )
      * )
      */
-    public function show($id)
+    public function show($slug)
     {
-        return new PortfolioResource(Portfolio::find($id));
+        $qry = Portfolio::where('slug', $slug)->firstOrFail();
+        return new PortfolioSingleResource($qry);
     }
 }
