# app/Http/Resources/PortfolioSingleResource.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class PortfolioSingleResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'slug' => $this->slug,
+            'thumbnail' => $this->thumbnail,
+            'description' => $this->description,
+            'repository' => $this->repository,
+            'website' => $this->website,
+            'tag' => $this->tag
+        ];
+    }
+}
